update example dsl and travis build